fix body overflow caused by height 100vh

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
     display: flex;
-    height: 100vh;
+    min-height: 100vh;
     flex-direction: column;
     justify-content: space-between;
     border: solid 5px red;
